# vulkan-demo

./: CMakeLists.txt  README.md  main2.cpp  vulkanApp.cpp  vulkanApp.h
common/: common.h  filetool.h  vulkanApp.cpp  vulkanApp.h
example/: CMakeLists.txt  triangle.cpp
sample/: CMakeLists.txt  README.md  frag.spv  main.cpp  shader.frag  shader.vert
